# ComputeMath

Lab1/: README.md  lab.py
Lab2/: README.md  lab.py
Lab3/: README.md  lab.py
Lab4/: README.md  lab.py
Lab5/: README.md  lab.py
Lab6/: README.md  lab.py
Lab7/: README.md  lab.py
Lab8/: CMakeLists.txt  README.md  main.cpp  plot.py
